--- a/css/style.css
+++ b/css/style.css
@@ -152,3 +152,76 @@ rect.menu-dropdown, text.menu-dropdown,
 rect.continent-selector {
   cursor: pointer;
 }
+
+
+div.about-page {
+  width: inherit;
+}
+
+div.about-content {
+  width: 50%;
+  float: left;
+  box-sizing: border-box;
+  min-height: 100px;
+  padding: 40px 20px;
+}
+
+div.about-content:first-child {
+  border-right: 2px solid gray;
+}
+
+div.team-member {
+  width: 50%;
+  float: left;
+  box-sizing: border-box;
+  margin-bottom: 45px;
+}
+
+h2.section-title {
+  font-size: 22px;
+  color: #dd1924;
+  text-align: center;
+  margin-bottom: 40px;
+}
+
+h2.second-title {
+  margin-top: 20px;
+  clear: both;
+}
+
+h3.member-name {
+  font-size: 18px;
+  text-align: center;
+  color: #000;
+  margin: 20px 0px 20px 0px;
+}
+
+p.about-text {
+  color: #000;
+  font-size: 16px;
+  margin: 0 auto;
+  margin-top: 20px;
+  width: 80%;
+  line-height: 22px;
+  clear: both;
+}
+
+p.member-description {
+  font-size: 14px;
+  line-height: 18px;
+  text-align: center;
+  color: #000;
+}
+
+img.photo {
+  width: 150px;
+  height: 150px;
+  margin: 0 auto;
+  display: block;
+  border-radius: 50%;
+}
+
+
+.hidden {
+  display: none;
+}
