--- a/css/style.css
+++ b/css/style.css
@@ -139,23 +139,43 @@ p.nav, h1, p.uf {
   user-select: none;          /* Likely future */
 }
 
-
+p.uf {
+  transition: box-shadow 0.3s ease 0s;
+}
 p.sudeste {
-  border-bottom: 2px solid #7DB2DD;
+  box-shadow: 0px -2px 0px #7DB2DD inset;
 }
-p.sul {
-  border-bottom: 2px solid #F8A40D;
-}
-p.nordeste {
-  border-bottom: 2px solid #688BAD;
-}
-p.centro-oeste {
-  border-bottom: 2px solid #0079B5;
-}
-p.norte {
-  border-bottom: 2px solid #FC4F68;
+p.sudeste-hold:hover {
+  box-shadow: 0px -2px 0px #7DB2DD inset;
 }
 
+p.sul {
+  box-shadow: 0px -2px 0px #F8A40D inset;
+}
+p.sul-hold:hover {
+  box-shadow: 0px -2px 0px #F8A40D inset;
+}
+
+p.nordeste {
+  box-shadow: 0px -2px 0px #688BAD inset;
+}
+p.nordeste-hold:hover {
+  box-shadow: 0px -2px 0px #688BAD inset;
+}
+
+p.centro-oeste {
+  box-shadow: 0px -2px 0px #0079B5 inset;
+}
+p.centro-oeste-hold:hover {
+  box-shadow: 0px -2px 0px #0079B5 inset;
+}
+
+p.norte {
+  box-shadow: 0px -2px 0px #FC4F68 inset;
+}
+p.norte-hold:hover {
+  box-shadow: 0px -2px 0px #FC4F68 inset;
+}
 
 rect.pause-button, path.play-button,
 circle.movie-info:hover, circle.menu-option:hover,
